src/test/deca/syntax/invalid/resultats/test00_tokens-lex.res
'{': [@0,293:293='{',<36>,14:0]
'else': [@1,296:299='else',<9>,15:1]
'false': [@2,301:305='false',<10>,15:6]
'if': [@3,307:308='if',<11>,15:12]
'print': [@4,310:314='print',<17>,15:15]
'println': [@5,316:322='println',<18>,15:21]
'printlnx': [@6,324:331='printlnx',<19>,15:29]
'printx': [@7,333:338='printx',<20>,15:38]
'return': [@8,340:345='return',<22>,15:45]
'true': [@9,347:350='true',<24>,15:52]
'while': [@10,352:356='while',<25>,15:57]
IDENT: [@11,359:361='int',<26>,16:1]
IDENT: [@12,363:367='float',<26>,16:5]
IDENT: [@13,369:374='string',<26>,16:11]
IDENT: [@14,376:382='boolean',<26>,16:18]
'}': [@15,384:384='}',<37>,17:0]
